cluster/apps/taqueria-bonjour/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: taqueria-bonjour
  labels:
    app: taqueria-bonjour
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bonjourinc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: frontend
              servicePort: 80
    - host: bonjour.bonjourinc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: frontend
              servicePort: 80
    - host: bonjour.paulynomial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: frontend
              servicePort: 80
    - host: "bonjour.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: frontend
              servicePort: 80
